# iit_commons

./: CMakeLists.txt  package.xml
doc/: Doxyfile.in
include/iit/commons/dog/: declarations.h  feet_contact_forces.h  feet_jacobians.h  forward_kinematics.h  inertia_properties.h  inverse_dynamics.h  inverse_kinematics.h  joint_bool_map.h  joint_data_map.h  joint_id_tricks.h  jsim.h  leg_bool_map.h  leg_data_map.h  link_data_map.h  transforms.h
include/iit/commons/geometry/: algebra.h  rotations.h
