<package format="2">
  <name>iit_commons</name>
  <version>1.0.0</version>
  <description>
        A library for algebra, kinematics and dynamics for quadruped robots.
  </description>

  <author email="marco.frigerio@kuleuven.be">Marco Frigerio</author>
  <author email="michele.focchi@iit.it">Michele Focchi</author>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
</package>
